[build-system]
requires = ["hatchling", "numpy", "pandas", "matplotlib", "xgboost", "scikit-learn"]
build-backend = "hatchling.build"
[project]
name = "xgbGAMView"
version = "0.12"
description = "Generalized Additive Models (GAMs) trained using xgboost with visualization and smoothing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TAU-MLwell/xgbGAMView"
Issues = "https://github.com/TAU-MLwell/xgbGAMView/issues"
